syntax = "proto3";
package logStore;

option go_package = "./logStore";

service Ping{
  rpc Ping (PingReq) returns (PongRes) {}
}

message PingReq{
  string ping = 1;
}

message PongRes{
  string pong = 1;
}
